# lau-conformal-agents

./: AGENT.md  Cargo.toml  README.md
src/: agent_learning.rs  cft.rs  compactification.rs  conformal_laplacian.rs  conformal_map.rs  conformal_weight.rs  lib.rs  liouville.rs  mobius.rs  virasoro.rs  weyl.rs
