[package]
name = "lau-conformal-agents"
version = "0.1.0"
edition = "2021"
description = "Conformal geometry for agents — transformations that preserve angles but not distances"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
num-complex = { version = "0.4", features = ["serde"] }
approx = "0.5"

[dev-dependencies]
proptest = "1"
